# pyPhin

./: .gitignore  LICENSE  README.md  pyphin.py  pyproject.toml
pyphin/: file.tcss  main.py  pyath.py
