[project]
name = "pyphin"
version = "0.1.0"
description = "TUI file explorer built with Textual"
authors = [{ name = "Krishiv Patel" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["textual"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
pyphin = "pyphin.main:main"