[project]
name = "pyphin"
version = "0.1.0"
description = "TUI file explorer built with Textual"
authors = [{ name = "Krishiv Patel" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = ["textual"]

[tool.setuptools.packages.find]
include = ["pyphin*"]

[tool.setuptools.package-data]
pyphin = ["*.tcss"]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
pyphin = "pyphin.main:main"